Version 1.32
   * Fix loss of strand information when joining split alignments.

Version 1.31
   * Added Bio::DB::Sam->max_pileup_cnt() and Bio::DB::Bam->max_pileup_cnt() method
     to allow users to adjust Samtools cap on pileup depth.

Version 1.30
   * Apply patch from Jason Walker to return full arrays across 0-depth coverage
     and to max the count at a certain coverage.

Version 1.29
   * Apply patch from Hongwen Qiu to fix memory allocation error in 
   bam header generation.

Version 1.28
   *Fixed coverage calculations so that sections of reads that cover 
    the reference genome which are marked in the CIGAR string as
    'N' (skip) or 'D' (delete) do not contribute to coverage.
   *The bamToGBrowse.pl script now takes advantage of genomeCoveragetoBed
    from the BedTools package. If this executable is installed, BigWig
    generation will speed up noticeably.

Version 1.27
   *Support for SAM/BAM files in which the sequence is given as "*".
   This will return a completely ambiguous read (NNNNNNNN) of the proper length.
   *SamToGBrowse functions will now work properly under a fastCGI environment.

Version 1.26
   * Added support for samtools >= 0.1.9 is_refskip field in pileups.

Version 1.25
   * Removed debugging warning in get_feature_by_id().
   * Identify version-specific samtools installs where the prefix is xyz and the
     include/lib files are in xyz/include and xyz/lib (Contributed by John Marshall).

Version 1.24
   * More revisions needed to run tests succssfully. Sorry!

Version 1.23
   * added missing files needed for the multi-gaps test introduced in 1.22.
 
Version 1.22

    * fix/test for 'incomplete cigar/split alignments processing of
      multi-gaps' (https://sourceforge.net/tracker/?func=detail&aid=3083769&group_id=27707&atid=391291)"

Version 1.21
    * Fixed the AlignWrapper->can() method, which was causing crashes with GBrowse2.

Version 1.20
    * Added Bio::DB::Tam->header_read() method.

Version 1.19